--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -61,6 +61,13 @@
   align-items: center;
 }
 
+.jornal__title-container h4{
+  max-width: 7ch;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .journal__entry-img{
   width: 70px;
   height: 70px;
