--- a/src/styles/components/notes/_notes.scss
+++ b/src/styles/components/notes/_notes.scss
@@ -14,6 +14,7 @@
   background: $gray;
   border-radius: 10px;
   margin-bottom: 2rem;
+  padding: 1.5rem;
 }
 
 .notes__title-input, .notes__textarea{
